<resources>
	<string name="app_name">Dicoding Story</string>

	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="name">Name</string>
	<string name="sign_in">Sign In</string>
	<string name="sign_up">Sign Up</string>
	<string name="sign_out">Sign Out</string>

	<string name="logo_description">Dicoding Story Logo</string>
	<string name="sign_up_title">Sign up to see stories around the world.</string>
	<string name="sign_up_message">Don\'t have an account?</string>
	<string name="sign_in_message">Have an account?</string>
	<string name="copyright">© 2022 Hanif Sulthan Rizqullah</string>

	<string name="camera">Camera</string>
	<string name="gallery">Gallery</string>
	<string name="description">Description</string>
	<string name="upload">Upload</string>

	<string name="greeting">Hello, %1$s</string>
	<string name="empty_name">Name cannot be empty!</string>
	<string name="empty_email">Email cannot be empty!</string>
	<string name="empty_password">Password cannot be empty!</string>
	<string name="not_match_email">Email does not match!</string>
	<string name="not_match_password">Password does not match!</string>
	<string name="success">Success</string>
	<string name="sign_up_success">Sign Up success! Please sign in to continue.</string>
	<string name="okay">Okay</string>
	<string name="permission_denied">Permission denied!</string>
	<string name="choose_picture">Choose a picture</string>
	<string name="upload_warning">Please take or choose a picture first</string>
</resources>