<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.add.AddActivity">

		<ImageView
			android:id="@+id/previewImageView"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_margin="8dp"
			app:layout_constraintBottom_toTopOf="@id/cameraButton"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_baseline_image_24"
			app:tint="@color/black" />

		<Button
			android:id="@+id/cameraButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:text="@string/camera"
			app:layout_constraintBottom_toTopOf="@id/descriptionEditTextLayout"
			app:layout_constraintEnd_toStartOf="@id/galleryButton"
			app:layout_constraintStart_toStartOf="parent" />

		<Button
			android:id="@+id/galleryButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:text="@string/gallery"
			app:layout_constraintBottom_toBottomOf="@id/cameraButton"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@id/cameraButton"
			app:layout_constraintTop_toTopOf="@id/cameraButton" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/descriptionEditTextLayout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			app:layout_constraintEnd_toEndOf="@id/previewImageView"
			app:layout_constraintStart_toStartOf="@id/previewImageView"
			app:layout_constraintTop_toBottomOf="@id/cameraButton">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/descriptionEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/description"
				android:inputType="textCapSentences|textMultiLine"
				android:maxLength="1000"
				android:maxLines="4"
				tools:ignore="SpeakableTextPresentCheck" />

		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/uploadButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="32dp"
			android:layout_marginEnd="8dp"
			android:text="@string/upload"
			app:layout_constraintBottom_toTopOf="@id/copyrightTextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/descriptionEditTextLayout" />

		<TextView
			android:id="@+id/copyrightTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginEnd="32dp"
			android:layout_marginBottom="8dp"
			android:text="@string/copyright"
			android:textSize="14sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>