<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.signin.SignInActivity">

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/topGuidelineHorizontal"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:orientation="horizontal"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintGuide_percent="0.1"
			app:layout_constraintStart_toStartOf="parent" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/bottomGuidelineHorizontal"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:orientation="horizontal"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintGuide_percent="0.3"
			app:layout_constraintStart_toStartOf="parent" />

		<ImageView
			android:id="@+id/imageView"
			android:layout_width="0dp"
			android:layout_height="80dp"
			android:layout_marginStart="32dp"
			android:layout_marginEnd="32dp"
			app:layout_constraintBottom_toTopOf="@id/bottomGuidelineHorizontal"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/topGuidelineHorizontal"
			app:srcCompat="@drawable/image_dicoding" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/emailEditTextLayout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="32dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/bottomGuidelineHorizontal"
			app:startIconDrawable="@drawable/ic_baseline_email_24">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/emailEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/email"
				android:inputType="textEmailAddress"
				tools:ignore="SpeakableTextPresentCheck" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/passwordEditTextLayout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="32dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout"
			app:passwordToggleEnabled="true"
			app:startIconDrawable="@drawable/ic_baseline_lock_24">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/passwordEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/password"
				android:inputType="textPassword"
				app:passwordToggleEnabled="true"
				tools:ignore="SpeakableTextPresentCheck" />

		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/signInButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginTop="32dp"
			android:layout_marginEnd="32dp"
			android:backgroundTint="@color/navi"
			android:text="@string/sign_in"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout" />

		<TextView
			android:id="@+id/signUpMessageTextView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginTop="8dp"
			android:text="@string/sign_up_message"
			android:textColor="@color/black"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/signInButton" />

		<TextView
			android:id="@+id/signUpTextView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:text="@string/sign_up"
			android:textColor="@color/blue_500"
			app:layout_constraintStart_toEndOf="@id/signUpMessageTextView"
			app:layout_constraintTop_toTopOf="@id/signUpMessageTextView" />

		<TextView
			android:id="@+id/copyrightTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginEnd="32dp"
			android:layout_marginBottom="8dp"
			android:text="@string/copyright"
			android:textSize="14sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>